# onenote-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/onenote_mcp/: __init__.py  main.py  server.py
src/onenote_mcp/application/: __init__.py  use_cases.py
src/onenote_mcp/domain/: __init__.py  models.py  ports.py
src/onenote_mcp/infrastructure/: __init__.py  az_cli_token.py  azure_oauth_proxy.py  graph_client.py  obo_token.py
tests/: __init__.py  conftest.py  test_integration.py
